--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-WEATHER_API_KEY=f36a6c5be5ad7936f88360daafd6bb15
+WEATHER_API_KEY=XXXX
 WEATHER_API_BASE_URL=http://api.openweathermap.org/data/2.5
 WEATHER_API_CITY_DETAIL=weather?q={city}
 WEATHER_API_SEVERAL_CITIES=group?id={cities}
