--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.0",
+    "dotenv-webpack": "^4.0.0",
     "file-loader": "^6.0.0",
     "regenerator-runtime": "^0.13.7",
     "resolve-url-loader": "^3.1.1",
