update env file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 WEATHER_API_KEY=XXXX
-WEATHER_API_BASE_URL=http://api.openweathermap.org/data/2.5
-WEATHER_API_CITY_DETAIL=weather?q={city}
-WEATHER_API_SEVERAL_CITIES=group?id={cities}
+WEATHER_API_BASE_URL=XXXX
+WEATHER_API_TEMP_UNIT=XXXX
